[pdf] IME menu positioning

Pass the caret position to Pepper so that the IME menu can be displayed
at the proper position. The menu was displayed at the bottom of the
viewport. After this fix, it will be displayed below the focused
editable form control.

Bug: 601322
Change-Id: I1fdbe626b63575038ddb7990bb7f77eb19af8b64
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3043885
Commit-Queue: Keren Zhu <kerenzhu@chromium.org>
Reviewed-by: Bill Budge <bbudge@chromium.org>
Reviewed-by: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#904089}